# gol

./: CMakeLists.txt  LICENSE  README.md
include/: board.h  gol.h  grid.h  screen.h
src/: board.c  gol.c  screen.c
